force-app/main/default/objects/Spotter_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>257</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Spotter Configuration</label>
    <nameField>
        <label>Spotter Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spotter Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>